--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'aduma';
-    src: url('../fonts/Aduma_webfont/aduma-regular-webfont.eot');
-    src: url('../fonts/Aduma_webfont/aduma-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Aduma_webfont/aduma-regular-webfont.woff') format('woff'),
-         url('../fonts/Aduma_webfont/aduma-regular-webfont.ttf') format('truetype'),
-         url('../fonts/Aduma_webfont/aduma-regular-webfont.svg#adumamedium') format('svg');
-    font-weight: 300;
+    src: url('../fonts/Aduma_webfont/aduma-medium-webfont.eot');
+    src: url('../fonts/Aduma_webfont/aduma-medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Aduma_webfont/aduma-medium-webfont.woff') format('woff'),
+         url('../fonts/Aduma_webfont/aduma-medium-webfont.ttf') format('truetype'),
+         url('../fonts/Aduma_webfont/aduma-medium-webfont.svg#adumamedium') format('svg');
+    font-weight: 500;
     font-style: normal;
 }
 @font-face {   
@@ -15,7 +15,7 @@
          url('../fonts/EzerBlock_webfont/ezer-block_oepro-regular-webfont.woff') format('woff'),
          url('../fonts/EzerBlock_webfont/ezer-block_oepro-regular-webfont.ttf') format('truetype'),
          url('../fonts/EzerBlock_webfont/ezer-block_oepro-regular-webfont') format('svg');
-    font-weight: 300;
+    font-weight: 500;
     font-style: normal;
 }
 
@@ -85,6 +85,14 @@ main{
 	width:100%;
 }
 
+/* --------sec 0 --------------------------------------------------------------------*/
+#sec0{
+	background: #dddddd url("../images/Screen_0/opening.png") no-repeat 50%;
+	background-size: 50%;
+	height:100vh;
+	width:100%;
+}
+
 /* --------sec 1 --------------------------------------------------------------------*/
 
 #sec1{
@@ -102,7 +110,7 @@ main{
 	text-align: right;	
 	top: 28px;
 	right: 40px;
-	letter-spacing: 1px;
+	font-weight: lighter;
 }
 
 #user{
@@ -126,7 +134,6 @@ main{
 #slider {
  border:none;
  position:relative;
- top:44%;
  left:-170%;
  height:100px;
  width:30px;
@@ -174,17 +181,8 @@ main{
 	text-align: right;	
 	top: 28px;
 	right: 40px;
-	letter-spacing: 1px;
+	font-weight: lighter;
 }
-#sec2_info{
-	position:absolute;
-	top:15%;
-	left:1%;
-	width:245px;
-	height:277px;
-	background-image: url("../images/Screen 2/info.png");
-	display:none;
-}	
 
 /* --------sec 3 --------------------------------------------------------------------*/
 
@@ -202,7 +200,7 @@ main{
 	text-align: right;	
 	top: 28px;
 	right: 40px;
-	letter-spacing: 1px;
+	font-weight: lighter;
 }
 #paycheck{
 	position: relative;
@@ -232,6 +230,26 @@ main{
     font-family: aduma;
     line-height:35px;
 }
+#sec3 p{
+	position: absolute;
+	top: 85%;
+	left: 38%;
+	font-family: EzerBlock,arial;
+	size: 30px;
+	color: #FFFFFF;
+}
+#check::-webkit-input-placeholder { /* WebKit browsers */
+    color: #000000;
+}
+#check::-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+	   color: #000000;
+}
+#check::-moz-placeholder { /* Mozilla Firefox 19+ */
+	   color: #000000;
+}
+#check::-ms-input-placeholder { /* Internet Explorer 10+ */
+	   color: #000000;
+}
 
 /* --------sec 4 --------------------------------------------------------------------*/
 
@@ -244,19 +262,20 @@ main{
 #little_check {
 	display: none;
 	position: absolute;
-	background: #3a5f8d url("../images/Screen_4/half_little_check.png") no-repeat;
-	background-size: 70% 70%;
-	width: 41%;
-	height: 25%;
-	left: 35%;
+	background: url("../images/Screen_4/half_little_check.png") no-repeat;
+	background-size: 80% 80%;
+	width: 485px;
+	height: 117px;
+	left: 34%;
 	top: -40%;
-	opacity: 0.6;
 }
 #check_no_changed{
+	background: url("../images/Screen_4/shekel.png") no-repeat 25% center;
+	background-size: 6%;
 	position: absolute;
 	width: 140px;
-	top: 12%;
-	left: 43%;
+	top: 11%;
+	left: 50%;
 	background-color:rgba(0, 0, 0, 0);
  	color: #000000;
     border: none;
@@ -265,21 +284,21 @@ main{
 	text-align:center;
     font-family: aduma;
 }
-#sec4>h1 {
+#sec4>h1{
 	position:absolute;
 	font-family: aduma;
 	font-size: 40px;
 	color: #FFFFFF;
 	text-align: right;	
-	top: 40px;
+	top: 20px;
 	right: 40px;
-	letter-spacing: 1px;
+	font-weight: lighter;
 }
 #percentageButtons {
 	position: relative;
 	width: 60%;
 	left: 20%;
-	top: 29%; 
+	top: 35%; 
 }
 .perButton {	
 	display:inline-block;
@@ -296,59 +315,65 @@ main{
 	border: none;
 	outline: none;
 }
+/*
 #percentages{
+	border: 1px solid green;
 	position: absolute;
 	width: 64%;
 	height: 20%;
-	top: 46%;
+	top: 62%;
 	left: 18%;
-}
-#percentage_first{
-	visibility: visible;	
-	position: absolute;
-	left: 30%;
-	top: 35%;
-}
-.first_msg{
-	text-align: center;
-	color: #FFFFFF;
-	font: 48px aduma,Arial,Geneva, sans-serif;
-}
+}*/
 #img_per{
 	position: absolute;
-	top: 47%;
+	top: 57%;
 	right: 8%;
 }
 #percentage_second{
+	position: absolute;
+	width: 50%;
+	height: 24%;
+	top: 72%;
+	right: 35%;
 	direction: rtl;
 	visibility: hidden;
-	position: absolute;
-	width: 80%;
-	top: 35%;	
 }
-#percentage_second p{
-	background: url("../images/Screen_4/NIS.png") no-repeat left center;
-	color: #FFFFFF;
-	font: 48px aduma,Arial,Geneva, sans-serif;
+.text_sec4{
+	color: #9eafc5;
+	font: 44px aduma,Arial;
+	display: inline-block;
 }
-#percentage_second input{
-	background: none;
-	text-align: left;
-	width: 36%;
-	float: left;
-	margin-left: 5%;
+#perMonth,#totalAmout{
+ 	background: none;
+	direction: ltr;
+	display: inline-block;
+	border: none; 
+	font: 44px aduma,Arial;
 	color: #FFFFFF;
-	border: none;
 	outline: none;
+	margin-right: 5px;
+	margin-left: 15px;
 }
-
+#perMonth_in{
+	display: none;
+}
 /* --------sec 5 --------------------------------------------------------------------*/
 #sec5{	
 	background:#ffbf47;
 	height:100vh;
 	width:100%;
+	position:relative;
 }
-
+#sec5>h1 {
+	position:absolute;
+	font-family: aduma;
+	font-size: 40px;
+	color: #FFFFFF;
+	text-align: right;	
+	top: 40px;
+	right: 40px;
+	font-weight: lighter;	
+}
 /* opening animation to sec 5 */
 
 #envelope5_part{
@@ -380,7 +405,7 @@ main{
 #little_check2 {
 	display: none;
 	position: absolute;
-	background: url("../images/Screen 3/Salary.png") no-repeat;
+	background: url("../images/Screen_5/Salary.png") no-repeat;
 	background-size: 80% 100%;
 	width: 41%;
 	height: 30%;
@@ -389,7 +414,8 @@ main{
 	z-index: 2;	
 }
 #check_no_changed2{
-/*	z-index: 10; */
+	background: url("../images/Screen_4/shekel.png") no-repeat 25% center;
+	background-size: 6%;
 	position: relative;
 	width: 140px;
 	top: 52%;
@@ -428,7 +454,7 @@ main{
 	left: 15%;
 	top: 52%;
 	width: 82px;
-	height: 82px;  
+	height: 82px;
 }
 #button-next {
 	position: absolute;
@@ -455,12 +481,13 @@ main{
  	outline: none;
 }
 
-#slider5>.sp:nth-child(1){background-image: url("../images/Screen_5/Box_Ayalon.png"); }
-#slider5>.sp:nth-child(2){background-image: url("../images/Screen_5/Box_Klal.png") ;}
-#slider5>.sp:nth-child(3){background-image	: url("../images/Screen_5/Box_Harel.png"); }
-#slider5>.sp:nth-child(4){background-image: url("../images/Screen_5/Box_Menorah.png"); }
-#slider5>.sp:nth-child(5){background-image: url("../images/Screen_5/Box_Migdal.png"); }
-#slider5>.sp:nth-child(6){background-image: url("../images/Screen_5/Box_Phoenix.png");}
+#Ayalon {background-image: url("../images/Screen_5/Box_Ayalon.png"); }
+#Klal {background-image: url("../images/Screen_5/Box_Klal.png") ;}
+#Harel {background-image	: url("../images/Screen_5/Box_Harel.png"); }
+#Menorah {background-image: url("../images/Screen_5/Box_Menorah.png"); }
+#Migdal {background-image: url("../images/Screen_5/Box_Migdal.png"); }
+#Phoenix {background-image: url("../images/Screen_5/Box_Phoenix.png");}
+
 
 /* --------sec 6 --------------------------------------------------------------------*/
 #sec6{	
@@ -494,45 +521,49 @@ main{
 	text-align: right;	
 	top: 28px;
 	right: 40px;
-	letter-spacing: 1px;
+	font-weight: lighter;
 }
 
 #no_idea{
-	position:absolute;
+	position:relative;
 	left:20%;
 	top:85%;
 	margin-top:6%;
 	z-index:0;
 	height:0px;
+	display:inline-block;
 }
 
 #medium{
-	position:absolute;
-	left:33.5%;
-	top:140%;
+	position:relative;
+	left:8.5%;
+	top:85%;
 	z-index:1;
 	height:0px;
+	display:inline-block;
 }
 
 #solid{
-	position:absolute;
-	left:45%;
+	position:relative;
+	left:1%;
 	top:85%;
 	z-index:2;
 	height:0px;
+	display:inline-block;
 }
 
 #danger{
-	position:absolute;
-	right:27%;
+	position:relative;
+	right:20%;
 	top:85%;
 	z-index:0;
-	height:0px;	
+	height:0px;
+	display:inline-block;	
 }
 
 #p1{
-	position:absolute;
-	bottom:49%;
+	position:relative;
+	bottom:39%;
 	right:83%;
 	outline: 0;
 	opacity:0;
@@ -543,9 +574,9 @@ main{
 }
 
 #p2{
-	position:absolute;
-	bottom:105%;
-	right:28%;
+	position:relative;
+	bottom:99%;
+	right:35%;
 	outline: 0;
 	opacity:0;
 	width:42px;
@@ -554,9 +585,9 @@ main{
 	button { outline: 0; }
 }
 #p3{
-	position:absolute;
-	bottom:104%;
-	right:62%;
+	position:relative;
+	bottom:107%;
+	right:73%;
 	outline: 0;
 	opacity:0;
 	width:42px;
@@ -565,8 +596,8 @@ main{
 	button { outline: 0; }
 }
 #p4{
-	position:absolute;
-	bottom:88%;
+	position:relative;
+	bottom:82%;
 	right:11%;
 	outline: 0;
 	opacity:0;
@@ -604,7 +635,7 @@ main{
 	}
 #plus3 {
 	position:absolute;
-	top:50%;
+	top:20%;
 	left:56%;
 	width: 200px;
 	height: 150px;
@@ -681,7 +712,7 @@ main{
 /* --------sec 9 --------------------------------------------------------------------*/
 
 #sec9{	
-	background: #b5b5b5 url("../images/Screen 9/Man_Box_full.png") no-repeat 50% 79%;
+	background: #b5b5b5 url("../images/Screen 9/Man_Box_cut.png") no-repeat 50% 79%;
 	position:relative;
 	height:100vh;
 	width:100%;
@@ -695,67 +726,22 @@ main{
 	text-align: right;	
 	top: 28px;
 	right: 40px;
-	letter-spacing: 1px;
+	font-weight: lighter;
 }
 
 #hair{
 	width:613px;
 	height:101px;
-	position:absolute;
-	top:15.3%;
-	left:26.2%;
+	position:relative;
+	top:1.5%;
+	left:23.78%;
 	background: transparent url("../images/Screen 9/Man_Box (1).png") no-repeat;
 	display:none;
 }
 
-#crown{
-	width:320px;
-	height:219px;
-	position:absolute;
-	top:0%;
-	left:45%;
-	background: transparent url("../images/Screen 9/king.png") no-repeat;
-	display:none;
-}
-#crown_info{
-	width:320px;
-	height:219px;
-	position:absolute;
-	top:25%;
-	left:3%;
-	background: transparent url("../images/Screen 9/crown_info.png") no-repeat;
-	display:none;
-}
-#pull_info{
-	width:305px;
-	height:316px;
-	position:absolute;
-	top:25%;
-	left:3%;
-	background: transparent url("../images/Screen 9/pull_info.png") no-repeat;
-	display:none;
-}
-#haircut_line{
-	width:485px;
-	height:2px;
-	position:absolute;
-	top:31%;
-	left:29%;
-	background: transparent url("../images/Screen 9/Line_Haircut.png") no-repeat;
-	display:none;
-}
-#scissors{
-	width:305px;
-	height:316px;
-	position:absolute;
-	top:12%;
-	left:66%;
-	background: transparent url("../images/Screen 9/Scissors.png") no-repeat;
-	display:none;
-}
 
 #B_no{
-	position:absolute;
+	position:relative;
 	top:50%;
 	left:36%;
 	width:163px;
@@ -764,8 +750,8 @@ main{
 }
 
 #B_yes{
-	position:absolute;
-	top:50%;
+	position:relative;
+	top:30.8%;
 	left:51%;
 	width:163px;
 	height:121px;
@@ -783,7 +769,7 @@ main{
 
 #B_yes:hover{
 	position:relative;
-	top:50%;
+	top:30.8%;
 	left:51%;
 	width:163px;
 	height:121px;
@@ -806,13 +792,13 @@ main{
 	text-align: right;	
 	top: 28px;
 	right: 40px;
-	letter-spacing: 1px;
+	font-weight: lighter;
 }
 
 
 #boss_face{
-	position:absolute;
-	top:17.3%;
+	position:relative;
+	top:18.5%;
 	left:44.8%;
 	width:115px;
 	height:115px;
@@ -820,8 +806,8 @@ main{
 }
 
 #boss_talk{
-	position:absolute;
-	top:22%;
+	position:relative;
+	bottom:30%;
 	left:58%;
 	width:145px;
 	height:140px;
@@ -832,8 +818,8 @@ main{
  background-color:#e69601;
  width: 30px;
  height: 215px;
- position: absolute;
- top:20%;
+ position: relative;
+ top:2%;
  left:15%;
  border-radius: 25px;
 }
