--- a/css/custom.css
+++ b/css/custom.css
@@ -783,7 +783,7 @@ main{
 	position:absolute;
 	top:0%;
 	left:45%;
-	background: transparent url("../images/Screen 9/king.png") no-repeat;
+	background: transparent url("../images/Screen 9/King.png") no-repeat;
 	display:none;
 }
 #crown_info{
