--- a/css/custom.css
+++ b/css/custom.css
@@ -78,14 +78,46 @@ aside div{
 	background: url("../images/Frame/PensionBag.png") no-repeat center 50%;
 }
 header{
-	background:url("../images/Frame/Social_Twitter_S.png") no-repeat 1% 45%,
-			   url("../images/Frame/Social_Facebook.png") no-repeat 5% 45%;
-	height:8%;
+	height:50px;
 	width:100%;
     top:0%;
     left:0%;
 	position:fixed;
 	z-index: 10;
+	padding: 5px;
+}
+header a{
+	margin-left: 12px;
+	display: inline-block;
+	position: relative;
+	height: 40px;
+	width: 40px;
+}
+#facebook{
+	background: url("../images/Frame/Social_Facebook.png") no-repeat;
+}
+#facebook:hover{
+	background-image: url("../images/Frame/Social_Facebook_S.png");
+}
+#twitter{
+	background:url("../images/Frame/Social_Twitter.png") no-repeat;
+}
+#twitter:hover{
+	background:url("../images/Frame/Social_Twitter_S.png") no-repeat;
+}
+#mail{
+	background:url("../images/Frame/Social_Mail.png") no-repeat;
+}
+#mail:hover{
+	background:url("../images/Frame/Social_Mail_S.png") no-repeat;
+}
+#about{
+	position: fixed;
+	font-family: EzerBlock,arial;
+	font-size: 16px;
+	color: #FFFFFF;
+	top: 3%;
+	left: 16%;
 }
 main{
 	height:100%;
@@ -271,9 +303,9 @@ main{
 #sec3 p{
 	position: absolute;
 	top: 85%;
-	left: 38%;
+	left: 29%;
 	font-family: EzerBlock,arial;
-	size: 30px;
+	font-size: 26px;
 	color: #FFFFFF;
 }
 #check::-webkit-input-placeholder { /* WebKit browsers */
@@ -353,19 +385,19 @@ main{
 	border: none;
 	outline: none;
 }
-/*
-#percentages{
-	border: 1px solid green;
-	position: absolute;
-	width: 64%;
-	height: 20%;
-	top: 62%;
-	left: 18%;
-}*/
 #img_per{
 	position: absolute;
 	top: 57%;
 	right: 8%;
+}
+#sec4>h4{ 
+	position:absolute;
+	font-family: EzerBlock,arial;
+	font-size: 20px;
+	color: #FFFFFF;
+	top: 58%;
+	right: 27%;
+	font-weight: lighter;
 }
 #percentage_second{
 	position: absolute;
@@ -410,7 +442,13 @@ main{
 	text-align: right;	
 	top: 40px;
 	right: 40px;
-	font-weight: lighter;	
+	font-weight: lighter;
+	outline: none;	
+	-webkit-user-select: none;
+  	-khtml-user-select: none;
+  	-moz-user-select: none;
+  	-o-user-select: none;
+  	user-select: none; 
 }
 /* opening animation to sec 5 */
 
@@ -450,6 +488,7 @@ main{
 	left: 34%;
 	top: -15%;
 	z-index: 2;	
+	
 }
 #check_no_changed2{
 	background: url("../images/Screen_4/shekel.png") no-repeat 25% center;
@@ -469,14 +508,18 @@ main{
 /* actually sec 5 */
 
 #slider-wrapper5 {
-/*	background: #ffbf47	url("../images/Screen_5/mini_env.png") no-repeat center top;
-	background-size: 11%; */  
 	display: none;
 	position: relative;
 	width: 60%;
 	margin: auto;
 	height: 72%; 
 	top: 0%;
+	outline: none;
+	-webkit-user-select: none;
+  	-khtml-user-select: none;
+	 -moz-user-select: none;
+  	-o-user-select: none;
+  	user-select: none; 
 }
 #slider5 {
 	position: relative;
@@ -948,10 +991,24 @@ main{
 /* --------sec 12 --------------------------------------------------------------------*/
 
 #sec12{	
-	background: #3a5f8d;
+	background: #84c560 url("../images/Screen_12/final.png") no-repeat center center;
+	background-size: 40%;
 	height:100vh;
 	width:100%;
+	position: relative;
 }
+#sec12>h1 {
+	position: absolute;
+	font-family: aduma;
+	font-size: 40px;
+	color: #FFFFFF;
+	text-align: right;	
+	top: 28px;
+	right: 40px;
+	font-weight: lighter;
+}
+
+
 
 
 /* Common styles and resets */
