--- a/css/custom.css
+++ b/css/custom.css
@@ -78,13 +78,14 @@ aside div{
 	background: url("../images/Frame/PensionBag.png") no-repeat center 50%;
 }
 header{
-	height:70px;
-	width:100%;
+	height: 7%;
+	width: 100%;
     top:0%;
     left:0%;
 	position:fixed;
 	z-index: 10;
-	padding: 20px;
+	padding-top: 20px;
+	padding-left: 20px;
 }
 header a{
 	margin-right: 12px;
@@ -444,11 +445,6 @@ main{
 	right: 40px;
 	font-weight: lighter;
 	outline: none;	
-	-webkit-user-select: none;
-  	-khtml-user-select: none;
-  	-moz-user-select: none;
-  	-o-user-select: none;
-  	user-select: none; 
 }
 /* opening animation to sec 5 */
 
@@ -515,18 +511,13 @@ main{
 	height: 72%; 
 	top: 0%;
 	outline: none;
-	-webkit-user-select: none;
-  	-khtml-user-select: none;
-	 -moz-user-select: none;
-  	-o-user-select: none;
-  	user-select: none; 
 }
 #slider5 {
 	position: relative;
 	height: 78%;
 	width: 40%;
 	left: 30%;
-	top: 12%;
+	top: 30%;
 }
 #button-previous {
 	position: absolute;
@@ -546,25 +537,37 @@ main{
 	width: 82px;
 	height: 82px;
 }
+#drag_env{
+	position: absolute;
+	top: 0%;
+	left: 46%;
+	background: url("../images/Screen_5/drag_env.png") no-repeat;
+	background-size: 70%;
+	margin: auto;
+	height: 28%;
+	width: 10%;
+	z-index: 2;
+}
 .sp {
 	position: absolute;
 	height: 100%;
 	width: 100%;
-	background-size: 90% 100%;	
+	background-size: 100% 100%;	
 	background-position: 50%;
 	background-repeat: no-repeat;
 }
-#drag_env{
-	display: block;
-	margin: auto;
-	height: 14%;
-	width: 10%;
- 	outline: none;
+.sp2 {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	background-size: 100% 100%;	
+	background-position: 50%;
+	background-repeat: no-repeat;
 }
-
 #Ayalon {background-image: url("../images/Screen_5/Box_Ayalon.png"); }
 #Klal {background-image: url("../images/Screen_5/Box_Klal.png") ;}
-#Harel {background-image	: url("../images/Screen_5/Box_Harel.png"); }
+#Harel {background-image	: url("../images/Screen_5/Box_Harel.png"); z-index: 1;  }
+#Harel2 {background-image: url("../images/Screen_5/Box_Harel2.png");	height: 335px;	width: 307px; 	z-index: 3; }
 #Menorah {background-image: url("../images/Screen_5/Box_Menorah.png"); }
 #Migdal {background-image: url("../images/Screen_5/Box_Migdal.png"); }
 #Phoenix {background-image: url("../images/Screen_5/Box_Phoenix.png");}
@@ -816,8 +819,8 @@ main{
 	position:absolute;
 	top:15.3%;
 	left:26.2%;
-	background: transparent url("../images/Screen 9/Man_Box (1).png") no-repeat;
-	display:none;
+/*	background: transparent url("../images/Screen 9/Man_Box (1).png") no-repeat;
+*/	display:none;
 }
 
 #crown{
