--- a/css/custom.css
+++ b/css/custom.css
@@ -203,7 +203,7 @@ main{
 	font-size: 40px;
 	color: #FFFFFF;
 	text-align: right;	
-	top: 59%;
+	top: 62%;
 	left: 66.8%;
 	font-weight: lighter;
 }
@@ -760,10 +760,31 @@ main{
 /* --------sec 7 --------------------------------------------------------------------*/
 
 #sec7{	
-	background:#dddddd;
+	background: #3a5f8d url("../images/Screen_7/graph.png") no-repeat center 40%;
+	background-size: 55%;
 	height:100vh;
 	width:100%;
+	position: relative;
 }
+#sec7>article:nth-child(1){
+	background: url("../images/Screen_7/info.png") no-repeat 45% top;
+	background-size: 70%;
+	position: absolute;
+	width: 745px;
+	height: 136px;
+	top: 80%;
+	right: 0%;
+}
+#sec7>article:nth-child(2){
+	background: url("../images/Screen_7/mikra.png") no-repeat;
+	background-size: 80%;
+	position: absolute;
+	width: 172px;
+	height: 101px;
+	top: 80%;
+	left: 18%;
+}
+
 
 /* --------sec 8 --------------------------------------------------------------------*/
 
