prepare for presentation

--- a/css/custom.css
+++ b/css/custom.css
@@ -469,7 +469,7 @@ main{
 }
 #env_up{
 	position: absolute;
-	top: 23%;
+	top: 26.4%;					/* was 23 */
 	left: 20%;
 	background: url("../images/Screen_5/env_up.png") no-repeat center top;
 	background-size: 60%; 
@@ -883,7 +883,7 @@ main{
 }
 #envelope_up {
 	position: absolute;
-	top: 19%;
+	top: 20%;				/* was 19 */
 	left: 28%;
 	height: 508px;
 	width: 566px;
@@ -904,7 +904,7 @@ main{
 #card {
 	position: absolute;
 	left: 28%;
-	top: 18%;
+	top: 19.39%;				/* was 18 */
 	height:	 380px;
 	margin: auto; 
 	width: 566px; 
