--- a/css/custom.css
+++ b/css/custom.css
@@ -448,7 +448,6 @@ main{
 	background:#ffbf47;
 	height:100vh;
 	width:100%;
-	position:relative;
 }
 #sec5>h1 {
 	position:absolute;
@@ -464,47 +463,41 @@ main{
 /* opening animation to sec 5 */
 
 #envelope5_part{
-	background:#ffbf47;
-	height:100%;
-	width:100%;
+	height: 520px;
+	width: 462px;
 	position: relative;
+	margin: auto;
 }
 #env_up{
 	position: absolute;
-	top: 23%; 	/*26.4%;	 was 23 */
-	left: 20%;
-	background: url("../images/Screen_5/env_up.png") no-repeat center top;
-	background-size: 60%; 
-	width: 60%;
-	height: 52%;
+	top: 27.2%; 	
+	background: url("../images/Screen_5/env_up.png") no-repeat center;
+	width: 455px;
+	height: 303px;
 	z-index: 1;
 }
 #env_down{
 	position: absolute;
-	bottom: 13%;
-	left: 20%;
+	bottom: 0%;
 	background: url("../images/Screen_5/env_down.png") no-repeat center bottom;
-	background-size: 60%;
-	width: 60%;
-	height: 65%;
+	background-size: 100%;
+	width: 455px;
+	height: 303px;
 	z-index: 3;
 }
 #little_check2 {
 	display: none;
 	position: absolute;
 	background: url("../images/Screen_5/Salary.png") no-repeat;
-	background-size: 80% 100%;
-	width: 41%;
-	height: 30%;
-	left: 34%;
+	background-size: 90% 100%; 
+	width: 448px;
+	height: 195px;
+	left: 26px;
 	top: -15%;
 	z-index: 2;	
-	
 }
 #check_no_changed2{
-/*	background: url("../images/Screen_4/shekel.png") no-repeat 25% center;
-	background-size: 6%;
-*/	position: relative;
+	position: relative;
 	width: 140px;
 	top: 52%;
 	left: 51%;
